--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1>Simulador de Sorteio</h1>
-<app-sorteio></app-sorteio>
+<div class="container">
+  <h1>Simulador de Sorteio</h1>
+  <app-sorteio></app-sorteio>
+</div>
