--- a/src/app/sorteio/sorteio.component.css
+++ b/src/app/sorteio/sorteio.component.css
@@ -1,25 +1,51 @@
-input,
-button {
-  margin: 5px;
+.sorteio-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+input {
+  width: 100%;
   padding: 10px;
-  font-size: 16px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
 }
 
 button {
-  background-color: #007bff;
+  width: 100%;
+  padding: 10px;
+  background-color: #364657;
   color: white;
   border: none;
   cursor: pointer;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+button:hover {
+  background-color: #0056b3;
 }
 
 ul {
+  margin-top: 0px;
   list-style: none;
-  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 40px;
+  flex-direction: column;
 }
 
 li {
   background: #f4f4f4;
-  margin: 5px 0;
-  padding: 10px;
+  padding: 8px;
+  margin-top: 5px;
   border-radius: 5px;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
 }
